test/parsetest/invalid/missing_semicolon.java
class Invalid3 {

	public static void main(String[] args) {
		int i = 0
		int b = 2
	}

}
